--- a/source/stylesheets/_photo.scss
+++ b/source/stylesheets/_photo.scss
@@ -1,9 +1,26 @@
+.photo-list {
+  @include span-columns(4);
+
+  @include media($medium-screen-up) {
+    @include span-columns(6);
+  }
+
+  @include media($large-screen-up) {
+    @include span-columns(9);
+  }
+}
+
 .photo-list__item {
   background-color: $white;
   border-radius: $base-border-radius;
   box-shadow: 0 2px 4px 0 rgba($black, 0.1);
   margin-bottom: $base-spacing;
   padding: $base-spacing;
+
+  @include media($large-screen-up) {
+    @include span-columns(3 of 9);
+    @include omega(3n);
+  }
 }
 
 .photo__likes-icon {
